[package]
name = "winit_types"
version = "0.1.0"
authors = ["The winit contributors", "Freya Gentz <zegentzy@protonmail.com>"]
edition = "2018"
description = "Types shared between winit and sister crates."
keywords = ["windowing"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-windowing/winit_types"
documentation = "https://docs.rs/winit_types"

[dependencies]
