[package]
name = "winit_types"
version = "0.1.0"
authors = ["The winit contributors", "Freya Gentz <zegentzy@protonmail.com>"]
edition = "2018"
description = "Types shared between winit and sister crates."
keywords = ["windowing"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-windowing/winit_types"
documentation = "https://docs.rs/winit_types"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.17.3"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
glutin_x11_sym = { version = "0.1.0", path = "../glutin_x11_sym" }
