[package]
name = "winit_types"
version = "0.1.0"
authors = ["The winit contributors", "Freya Gentz <zegentzy@protonmail.com>"]
edition = "2018"
description = "Types shared between winit and sister crates."
keywords = ["windowing"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rust-windowing/winit_types"
documentation = "https://docs.rs/winit_types"

[package.metadata.docs.rs]
features = ["serde_feature"]

[features]
serde_feature = ["serde"]

[dependencies]
serde = { version = "1", optional = true, features = ["serde_derive"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.17.3"

[target.'cfg(any(target_os = "linux", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
smithay-client-toolkit = "0.6"
glutin_osmesa_sys = { version = "0.1.0", path = "../glutin_sys/glutin_osmesa_sys" }
x11-dl = "2.18.3"
